--- a/public/manifest.json
+++ b/public/manifest.json
@@ -25,5 +25,6 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "border-radius":"50%"
 }
